--- a/make-Res.html
+++ b/make-Res.html
@@ -23,7 +23,7 @@
             <h1>Hot Restaurant</h1>
             <h3>get your reservations while they're hot!</h3>
             <hr>
-            <button class="btn btn-danger btn-lg"><span class="fa fa-eye"></span>View Tables</button>
+            <button class="btn btn-danger btn-lg"> <a href="http://localhost:3000/Tables"> <span class="fa fa-eye"></span>View Tables</button>
             <button class="btn btn-danger btn-lg"><span class="fa fa-external-link-square	
                 "><a href="index.html"></a></span></button> 
             <!-- <button class="btn btn-danger btn-lg"><span class="fa fa-calendar-check-o"></span> Make a
