--- a/make-Res.html
+++ b/make-Res.html
@@ -42,22 +42,22 @@
                     <div class="card-body">
                         <form role="form">
 
-                            <div class="form-group">
+                            <div class="form-group" id="name">
                                 <label for="name-input">Name</label>
                                 <input type="text" class="form-control" id="name">
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group" id="phone">
                                 <label for="phone-input">Phone Number</label>
                                 <input type="text" class="form-control" id="number">
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group" id="email">
                                 <label for="email-input">Email</label>
                                 <input type="text" class="form-control" id="email">
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group" id="id">
                                 <label for="id-input">Unique ID</label>
                                 <input type="text" class="form-control" id="id">
                             </div>
@@ -65,31 +65,32 @@
                         </form>
                         <br>
                         <div class="text-right">
-                            <button style= "float: left;"type="submit" class="btn btn-primary btn-md" id="add-btn">
+                            <button style= "float: left;"type="submit" class="btn btn-primary btn-md submit" id="add-btn">
                                 <span class=""></span> Submit</button>
                         </div>
                     </div>
                 </div>
+                <script type="text/javascript">
+                    $(".submit").on("click", function(event){
+                        event.preventDefault();
+                        var newReservation = {
+
+                         name: $("#name").val().trim(),
+                         phone: $("#phone").val().trim(),
+                         email: $("#email").val().trim(),
+                         id: $("#id").val().trim()
+                            
+                        }
+
+                        $.post("/api/reservation", newReservation, function(data){
+                            if(data){
+                                alert("Ur ass got a table");
+                            }else{
+                                alert("Ur ass is on the list");
+                            }
+                        });
+                    });
+                </script>
 </body>
 
 
-<!-- <div class="row">
-
-            <div class="col-12"> -->
-
-<!-- <div class="card mb-4">
-                    <div class="card-header">
-                        <h3><strong>Reservations</strong></h3>
-                    </div>
-                    <div class="card-body">
-                        <input type="text" id="character-search" class="form-control">
-                        <br>
-                        <div class="text-right">
-                            <button type="submit" class="btn btn-primary btn-md" id="search-btn"><span
-                                    class="fa fa-search"></span>
-                                Search
-                            </button>
-                        </div>
-                    </div>
-                </div> -->
-<!-- 
