--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <h3>get your reservations while they're hot!</h3>
             <hr>
             <button class="btn btn-danger btn-lg"> <a href="http://localhost:3000/Tables"> <span class="fa fa-eye"></span>View Tables</button>
-            <button class="btn btn-danger btn-lg"> <a href="http://localhost:3000/Reservation"> <span class="fa fa-calendar-check-o"></span> Make a
+            <button class="btn btn-danger btn-lg"> <a href="http://localhost:3000/Reserve"> <span class="fa fa-calendar-check-o"></span> Make a
                 Reservation</button>
         </div>
     </div>
 
 </body>
     <script>
-        
+
     </script>
 </html>
