--- a/make-Res.html
+++ b/make-Res.html
@@ -42,22 +42,22 @@
                     <div class="card-body">
                         <form role="form">
 
-                            <div class="form-group" id="name">
+                            <div class="form-group">
                                 <label for="name-input">Name</label>
                                 <input type="text" class="form-control" id="name">
                             </div>
 
-                            <div class="form-group" id="phone">
+                            <div class="form-group">
                                 <label for="phone-input">Phone Number</label>
                                 <input type="text" class="form-control" id="number">
                             </div>
 
-                            <div class="form-group" id="email">
+                            <div class="form-group">
                                 <label for="email-input">Email</label>
                                 <input type="text" class="form-control" id="email">
                             </div>
 
-                            <div class="form-group" id="id">
+                            <div class="form-group">
                                 <label for="id-input">Unique ID</label>
                                 <input type="text" class="form-control" id="id">
                             </div>
@@ -76,7 +76,7 @@
                         var newReservation = {
 
                          name: $("#name").val().trim(),
-                         phone: $("#phone").val().trim(),
+                         phone: $("#number").val().trim(),
                          email: $("#email").val().trim(),
                          id: $("#id").val().trim()
                             
